Fix up API routes, v2 api, reformat files
